--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -3,3 +3,4 @@ android.useAndroidX=true
 android.enableJetifier=true
 org.gradle.daemon=false
 org.gradle.parallel=false
+org.gradle.java.home=C:/Program Files/Java/jdk-17
