--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,6 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
   flutter_chat_ui: ^1.6.15
   google_fonts: ^6.2.1
   flutter_chat_types: ^3.6.2
@@ -41,9 +40,9 @@ dependencies:
   path_provider: ^2.1.4
   bubble: ^1.2.1
   url_launcher: ^6.3.1
-  # file_picker: ^8.1.2
-  # image_picker: ^1.1.2
-  # open_filex: ^4.5.0
+  file_picker: ^8.1.2
+  image_picker: ^1.1.2
+  open_filex: ^4.5.0
 
 dev_dependencies:
   flutter_test:
